--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                     <div id="header-opt-2" class="hidden">
                         <!-- Badge -->
                         <div class="inline-flex items-center gap-3 mb-8">
-                            <span class="bg-[#635bff]/10 text-[#635bff] text-[11px] px-2.5 py-1 rounded-full font-bold uppercase tracking-wide flex items-center gap-2">
+                            <span class="bg-[#635bff]/10 text-black text-[11px] px-2.5 py-1 rounded-full font-bold uppercase tracking-wide flex items-center gap-2">
                                 <span>Nouveau Service</span>
-                                <span class="w-1 h-1 bg-[#635bff] rounded-full"></span>
+                                <span class="w-1 h-1 bg-black rounded-full"></span>
                                 <span>100% Gratuit</span>
                             </span>
                         </div>
@@ -151,7 +151,7 @@
                     <div id="header-opt-1" >
                         <!-- Badge -->
                         <div class="inline-flex items-center gap-3 mb-8">
-                            <span class="bg-[#00d4ff]/10 text-black text-[11px] px-2.5 py-1 rounded-full font-bold uppercase tracking-wide flex items-center gap-2">
+                            <span class="bg-[#635bff]/10 text-black text-[11px] px-2.5 py-1 rounded-full font-bold uppercase tracking-wide flex items-center gap-2">
                                 <span>Consultation Experte</span>
                                 <span class="w-1 h-1 bg-black rounded-full"></span>
                                 <span>Boost ROI</span>
