--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@ rapide, sans vous perdre dans la technique.
     <footer class="bg-[#434343] text-white py-6 border-t border-[#333]">
         <div class="max-w-[1080px] mx-auto px-6">
             <div class="mb-10">
-                <img src="../bam_logo-white.png" alt="Company Logo" class="h-8 mb-4">
+                <img src="./bam_logo-white.png" alt="Company Logo" class="h-8 mb-4">
                 <p class="text-[#F5F6FA] text-[15px] font-normal">
                     Custom web and digital product development.
                 </p>
