--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ rapide, sans vous perdre dans la technique.
     </section>
 
     <section class="relative pt-[120px] pb-[100px] z-10">
-        <div class="absolute inset-0 w-full h-full -skew-y-6 origin-top-left bg-[#f6f9fc] -z-10 translate-y-24 -mt-[100px]">
+        <div class="absolute inset-0 w-full h-full -skew-y-6 origin-top-left bg-[#f6f9fc] -z-10 translate-y-24 -mt-[100px]  border-t border-dashed border-[#e1e8ed]/60">
             <div class="absolute -top-[10px] left-0 w-full h-[60px] pointer-events-none">
                 <div class="max-w-[1080px] mx-auto px-6 relative h-full">
                     <div
